--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "react-scripts": "1.1.1"
   },
   "scripts": {
-    "start": "./node_modules/.bin/webpack-serve ./config/webpack.config.js --port 2222 --open --content ./public",
-    "watch:scss": "sass --watch src/client/app/style/scss:public/css",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "eject": "react-scripts eject",
+    "watch:scss": "sass --watch src/style/scss:public/css",
     "lint:scss": "./node_modules/.bin/stylelint --fix \"**/*.scss\"",
-    "watch": "./node_modules/.bin/webpack --config ./config/webpack.config.js --progress --colors --watch"
+    "watch:webpack": "./node_modules/.bin/webpack --config ./config/webpack.config.js --progress --colors --watch"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
